major upgrade : create hourly and daily backups

--- a/templates/50_gcloud_hourly_backup.sh.j2
+++ b/templates/50_gcloud_hourly_backup.sh.j2
@@ -1,5 +1,5 @@
 #!/bin/bash
 
-{% for item in gcloud_fs_backup %}
+{% for item in gcloud_hourly_sync %}
 gsutil -m rsync -r {{ item.source }} gs://{{ item.destination }}
 {% endfor %}
