--- a/templates/backupninja.daily.conf.j2
+++ b/templates/backupninja.daily.conf.j2
@@ -8,7 +8,7 @@
 
 loglevel = 4
 reportemail = root
-reportsuccess = no
+reportsuccess = {{ backupninja_reportsuccess }} 
 reportinfo = no
 reportwarning = yes
 reportspace = no
